# Matting-Anything

./: .gitignore  .gitmodules  2026-05-27_SAM2_tb_Haystack_動画対応計画.md  2026-06-02_SAM2動画_複合対象トラッキング_フレーム選択_双方向伝播_計画.md  AGENTS.md  DESIGN.md  ERROR_LOG.md  GETTING_STARTED_ja.md  Haystack_pipeline計画表.md  Haystack_パイプライン機能説明書.md  INSTALL.md  INSTALL_ja.md  Matting_Anything.ipynb  Matting_Anything_Haystack.ipynb  Matting_Anything_Haystack.py  PLAN.md  QUICKSTART_DEVA_BEN2_TB_HYBRID.md  QUICKSTART_DEVA_BEN2_TB_HYBRID_MANUAL.md  QUICKSTART_uv_local.md  README_ja.md  REFERENCE.md  Sam2_BEN2_RouteA_for_Movie.ipynb  Sam2_BEN2_RouteA_for_Movie.py  Sam2_Transparent_Background.ipynb  Sam2_Transparent_Background_Haystack.ipynb  Sam2_Transparent_Background_Haystack.py  Sam2_Transparent_Background_Haystack_for_Movie.ipynb  Sam2_Transparent_Background_Haystack_for_Movie.py  WHITEBOARD.md  gradio_app.py  gradio_app_haystack.py  gradio_app_sam2_ben2_route_a_deva_for_Movie.py  gradio_app_sam2_ben2_route_a_deva_manual_for_Movie.py  gradio_app_sam2_ben2_route_a_for_Movie.py  gradio_app_sam2_ben2_tb_hybrid_deva_for_Movie.py  gradio_app_sam2_ben2_tb_hybrid_deva_manual_for_Movie.py  gradio_app_sam2_transparent_BG.py  gradio_app_sam2_transparent_BG_haystack.py  gradio_app_sam2_transparent_BG_haystack_for_Movie.py  pyproject.toml  (+7 more)
.github/: copilot-instructions.md
config/: inference_models.toml  route_a.toml
pipelines/: __init__.py  job_manager.py  mam_pipeline.py  route_a_deva_hybrid_video_pipeline.py  route_a_deva_video_pipeline.py  route_a_video_pipeline.py  sam2_tb_pipeline.py  sam2_tb_video_pipeline.py
tests/: __init__.py
セッションログ/: 2026_0626リポジトリ引継ぎ.md  sam2実装チェックと修正指示_2026_0603.md  (+2 more)
(+120 files in other folders)
